--- a/ОС/laba4-98/CMakeLists.txt
+++ b/ОС/laba4-98/CMakeLists.txt
@@ -4,5 +4,5 @@ project(laba4)
 set(CMAKE_CXX_STANDARD 98)
 
 
-add_executable(Receiver constants.h receiver.cpp processMessage.h errors.h)
-add_executable(Sender constants.h sender.cpp processMessage.h errors.h)
+add_executable(Receiver receiver.cpp processMessage.h)
+add_executable(Sender sender.cpp processMessage.h)
